# ReCoDE_Diffusion_Code

./: .gitignore  404.html  CMakeLists.txt  LICENSE.md  OutputFile.txt  OutputFile.vtu  README-old.md  README.md  diffusion  diffusion_petsc  environment.yml  fpm.toml  index.html  input.in  install.sh  mkdocs.yml  output  transport_petsc
.github/workflows/: docs.yml
1-numerics/: index.html
2-oop/: index.html
3-compile-basics/: index.html
4-io/: index.html
5-visualisation/: index.html
6-sparse-storage/: index.html
7-build-tools/: index.html
8-ext-libs/: index.html
app/: main.F90
appendix/: index.html
docs/: 1-numerics.md  2-oop.md  3-compile-basics.md  4-io.md  5-visualisation.md  6-sparse-storage.md  7-build-tools.md  7-ext-libs.md  8-build-tools.md  8-ext-libs.md  appendix.md  exercise.md  index.md
exercise/: index.html
search/: search_index.json
solutions/1a/: Materials.F90
solutions/1a/src/PETSc/: PETSc_Ksp.f90
solutions/1a/src/inoutproc/: Materials.f90
solutions/1b/: Materials.F90  Materials.f90  main.F90  main.f90
solutions/1b/src/: main.f90
solutions/1b/src/inoutproc/: Output.f90
solutions/1c/: Problem.F90  input.in
solutions/1c/src/inoutproc/: Problem.f90
solutions/2a/: Problem.F90  Problem.f90  input.in
solutions/2b/: Output.F90  Output.f90  main.F90  main.f90
solutions/3a/: Output.F90
solutions/3a/src/PETSc/: PETSc_Init.f90  PETSc_Vec.f90
solutions/3a/src/centralproc/: Matrix_Base.f90
solutions/3a/src/inoutproc/: Output.f90
solutions/3b/: CDS.F90  CDS.f90  MatGen.F90  MatGen.f90
solutions/3b/src/PETSc/: PETSc_Ksp.f90  PETSc_Vec.f90
solutions/3b/src/centralproc/: CDS.f90  MatGen.f90  Matrix_Base.f90
solutions/3b/src/inoutproc/: Problem.f90
solutions/3b/src/stdlib/: StdLib.f90
solutions/3b/src_old/: main.f90  makefile
solutions/3b/src_old/PETSc/: PETSc_Mat.f90
solutions/3b/src_old/centralproc/: CRS.f90  MatGen.f90
solutions/3b/src_old/stdlib/: Constants.f90
src/: CRS.F90  Constants.F90  MatGen.F90  MatGen.f90  Materials.F90  Matrix_Base.F90  Output.F90  PETScSolver.F90  PETScSolver.f90  Problem.F90  Solver.F90  constants_mod.mod  diamonddiff_mod.mod  input_mod.mod  main.f90  makefile  materials_mod.mod  output_mod.mod  petsc_init_mod.mod  petsc_ksp_mod.mod  petsc_mat_mod.mod  petsc_vec_mod.mod  petscsolver_mod.mod  problem_mod.mod  solver_mod.mod  stdlib_mod.mod
src/PETSc/: PETScInit.f90  PETScKSP.f90  PETScMat.f90  PETScVec.f90  PETSc_Init.F90  PETSc_Init.f90  PETSc_Ksp.F90  PETSc_Ksp.f90  PETSc_Mat.F90  PETSc_Mat.f90  PETSc_Vec.F90  PETSc_Vec.f90
src/centralproc/: CRS.f90  DiamondDiff.f90  MatGen.f90  PETScSolver.f90  Solver.f90
src/inoutproc/: Input.f90  Materials.f90  Output.f90  Problem.f90
src/stdlib/: Constants.f90  constants_mod.mod  stdlib_mod.mod
tools/: fluxplot  plot.py
